# reposage

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  M2_PLAN.md  README.md  action.yml  pyproject.toml  tox.ini
.github/: project-management.yml
.github/workflows/: ci.yml  demo.yml  deploy.yml  release.yml
docs/: agents.md  architecture.md  development.md
docs/plans/: m12-m13-roadmap.md  m8-m11-roadmap.md
docs/plans/archive/: m1-foundation.md
ds-audit/: action.yml
examples/: README.md  reposage-audit-enriched.md  reposage-audit.json  reposage-audit.md
k8s/: alerts.yaml  deployment.yaml  hpa.yaml  service.yaml
scripts/: check_line_counts.py
src/reposage/: __init__.py  cli.py  config.py  models.py  pipeline.py
src/reposage/analysis/: quality.py  risk.py  tests.py
src/reposage/api/: _all_extractor.py  _git_history.py  _symbol_extractor.py  surface.py
src/reposage/enrichment/: __init__.py  anthropic_provider.py  classify_prompt.py  debt_prompt.py  models.py  openai_provider.py  provider.py  synthesis_prompt.py
src/reposage/reports/: agent_brief.py  json_report.py  markdown.py  standards_github.py  standards_json.py  standards_markdown.py
src/reposage/scan/: _dep_parsers.py  _dep_parsers_dotnet.py  dependencies.py  languages.py  repo_meta.py  ts_analysis.py  ts_config.py
src/reposage/security/: _runner.py  bandit_scan.py  coverage_parser.py  eslint_scan.py  npm_audit.py  pip_audit.py  ruff_scan.py  scan.py
src/reposage/server/: __init__.py  app.py  observability.py
src/reposage/standards/: __init__.py  _cli.py  _secrets.py  _subproc.py  config.py  context.py  models.py  pipeline.py  s0_reproducible.py  s1_legible.py  s2_structured.py  s3_proven.py  s4_shipped.py  s5_accountable.py
terraform/: gke.tf  iam.tf  main.tf  outputs.tf  registry.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_agent_brief.py  test_api.py  test_cli.py  test_csharp.py  test_dependencies.py  test_enrichment.py  test_enrichment_anthropic.py  test_enrichment_cli.py  test_enrichment_models.py  test_enrichment_openai.py  test_enrichment_prompts.py  test_enrichment_provider.py  test_enrichment_renderers.py  test_java.py  test_observability.py  test_quality.py  test_reports.py  test_security.py  test_self_audit.py  test_server.py  test_standards_cli.py  test_standards_config.py  test_standards_context.py  test_standards_engine.py  test_standards_exclusion.py  test_standards_reports.py  test_standards_s0.py  test_standards_s1.py  test_standards_s2.py  test_standards_s3.py  test_standards_s4.py  test_standards_s5.py  test_ts.py
tests/fixtures/java_gradle_repo/: README.md  build.gradle
tests/fixtures/java_gradle_repo/src/main/java/: App.java
tests/fixtures/java_maven_repo/: README.md  checkstyle.xml  pom.xml
tests/fixtures/java_maven_repo/src/test/java/: AppTest.java
tests/fixtures/rust_repo/: Cargo.toml
tests/fixtures/rust_repo/src/: main.rs
tests/fixtures/rust_repo/tests/: integration_test.rs
tests/fixtures/security/: bandit-report.json  coverage.xml  eslint-report.json  lcov.info  npm-audit.json  pip-audit-report.json  ruff-report.json
tests/fixtures/standards/ds_failing_repo/: test_train.py  train.py
tests/fixtures/standards/ds_passing_repo/: .env.example  Dockerfile  README.md  evaluate.py  pyproject.toml  test_gate.py
tests/fixtures/standards/ds_passing_repo/.github/workflows/: ci.yml
tests/fixtures/standards/ds_passing_repo/alerts/: prometheus-rules.yml
tests/fixtures/standards/ds_passing_repo/src/churnpkg/: __init__.py  data.py  features.py  serve.py  train.py
tests/fixtures/standards/ds_passing_repo/tests/: test_features.py
tests/fixtures/ts_repo/: README.md  package.json  tsconfig.json
tests/fixtures/ts_repo/src/: app.ts  utils.ts
