[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "reposage"
version = "0.3.0"
description = "Deterministic repository audits for engineers."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "RepoSage contributors" },
]
keywords = ["audit", "cli", "repository", "static-analysis"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "hatchling>=1.26",
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.11",
  "tox>=4.27",
]
ai = [
  "anthropic>=0.40",
  "openai>=1.0",
]
observability = [
  "opentelemetry-sdk>=1.25",
  "opentelemetry-exporter-otlp>=1.25",
]
server = [
  "httpx>=0.27",
  "mcp[cli]>=1.0",
  "starlette>=0.37",
  "uvicorn>=0.30",
  "reposage[observability]",
]

[project.scripts]
reposage = "reposage.cli:main"

[project.urls]
Homepage = "https://github.com/ricardogr07/reposage"
Issues = "https://github.com/ricardogr07/reposage/issues"

# [dependency-groups] is a uv-native PEP 735 convenience alias for `uv sync`.
# It is NOT authoritative for pip installs. The canonical pip extras are defined
# above under [project.optional-dependencies].
[dependency-groups]
dev = [
  "build>=1.2",
  "hatchling>=1.26",
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.11",
  "tox>=4.27",
]
ai = [
  "anthropic>=0.40",
  "openai>=1.0",
  "pytest>=8.3",
  "pytest-cov>=6.0",
]

[tool.reposage.audit]
# Dogfood the exclude_globs knob: fixture repos and example outputs are inputs
# to the audit, not code to be graded against the Six Standards.
exclude_globs = ["tests/fixtures/**", "examples/**"]
# The secret scanner's own tests plant credential-shaped bait; scope the secret
# scan (tree and history) away from tests. The report annotates this scope.
secrets_exclude_globs = ["tests/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/reposage"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "/examples",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE",
  "/tox.ini",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=reposage --cov-report=term-missing -p no:cacheprovider -m \"not self_audit\""
norecursedirs = ["tests/fixtures"]
testpaths = ["tests"]
markers = [
  "subprocess: tests that run a real pytest subprocess (inner audit)",
  "self_audit: runs a full audit of this repo against itself (opt in via tox -e selfaudit)",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "SIM", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
packages = ["reposage"]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "anthropic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "starlette.*"
ignore_missing_imports = true

# opentelemetry is an optional [observability] extra and is not installed in the
# type-check env; the runtime code guards every import with try/except ImportError.
[[tool.mypy.overrides]]
module = "opentelemetry.*"
ignore_missing_imports = true
