[package]
name = "rust-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
sqlx = { git = "https://github.com/launchbadge/sqlx" }

[dev-dependencies]
tokio-test = "0.4"

[build-dependencies]
cc = "1.0"
